--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@
   width: 100%;
   height: auto;
 }
+.image2 {
+  width: 100%;
+  height: auto;
+}
+.image3 {
+  width: 50%;
+  height: auto;
+  position: absolute;
+  top: 55%;
+  left: -22%;
+}
 /* this section for nav */
 .main-nav {
   display: flex;
@@ -177,6 +188,262 @@
   line-height: 45px;
 }
 
+/* this section for funny videos */
+.online {
+  color: #0b0223;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 700;
+}
+.funny {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 48px;
+  font-weight: 700;
+}
+.funny-txt {
+  color: #534c64;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.videos {
+  text-align: center;
+}
+.card {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 48px 240px 120px 240px;
+  border-radius: 16px;
+}
+.box-container {
+  position: relative;
+  display: inline-block;
+}
+
+.box-image {
+  width: 342px;
+  height: auto;
+  transition: filter 0.3s;
+}
+
+.box-image:hover {
+  filter: blur(5px);
+}
+
+.icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+.box-container:hover .icon {
+  display: block;
+}
+
+.play-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #ff42a5;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+/* this section for instantly */
+.instantly {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 120px 240px 120px 427px;
+  gap: 120px;
+}
+.instantly-img {
+  border: 2px solid red;
+  position: relative;
+}
+.instantly-title {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 60px;
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.instantly-title1 {
+  color: #0b0223;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 60px;
+}
+.instantly-content {
+  text-align: right;
+}
+.instantly-txt {
+  width: 353px;
+  color: #534c64;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.instantly2 {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  padding: 120px 240px 120px 238px;
+  gap: 120px;
+}
+.instantly-content2 {
+  text-align: left;
+}
+
+/* this section for careers */
+.section-place {
+  display: flex;
+}
+.list {
+  list-style-type: none;
+  color: #fff;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 40px;
+}
+.list1 {
+  list-style-type: none;
+  color: #fff;
+  text-align: right;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 40px;
+}
+.careers {
+  background: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.careers-title {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 60px;
+}
+.careers-descriptions {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  width: 680px;
+  margin: 24px 0 32px 0;
+}
+.careers-btn {
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #ff42a5;
+  border-radius: 48px;
+  background: #fff;
+  border: 0;
+  padding: 21px 40px;
+  margin-top: 40px;
+}
+.games-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 16px;
+  justify-content: center;
+  border: 0;
+  border-radius: 50px;
+  padding: 10px 20px 10px 10px;
+}
+.games-btn:hover {
+  border: 2px solid #ff42a5;
+  color: #ff42a5;
+}
+.games {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 34px;
+  padding: 120px 282px 119px 239px;
+}
+/* this section for footer */
+.main-footer {
+  background: #0b0223;
+}
+.footer-title {
+  font-size: 45px;
+  color: #fff;
+  font-weight: 700;
+}
+.single-letter {
+  color: #ff42a5;
+}
+.footer-link {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+}
+.footer-txt {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  font-weight: 500;
+}
+.footer-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-link {
+  text-decoration: none;
+}
+.footer-info {
+  display: flex;
+  flex-direction: row;
+  gap: 60px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 66px;
+}
+.footer-logo {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 56px;
+}
+.terms {
+  display: flex;
+  flex-direction: row;
+  gap: 60px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 64px;
+}
+.play {
+  text-align: center;
+  margin-top: 8px;
+}
+.footer-main {
+  padding: 120px 0;
+}
 /* responsive */
 @media screen and (max-width: 567px) {
   .main-nav {
@@ -212,5 +479,21 @@
   .gamer-section2 {
     text-align: center;
     padding: 0 20px;
+  }
+  .instantly-content {
+    text-align: center;
+  }
+  .instantly {
+    padding: 0;
+    gap: 20px;
+    flex-direction: column;
+  }
+  .instantly-content2 {
+    text-align: center;
+  }
+  .instantly2 {
+    padding: 0;
+    gap: 20px;
+    flex-direction: column;
   }
 }
