--- a/style.css
+++ b/style.css
@@ -22,6 +22,18 @@
   top: 55%;
   left: -22%;
 }
+.image4 {
+  width: 100%;
+  height: auto;
+}
+.image5 {
+  width: 50%;
+  height: auto;
+  position: absolute;
+  top: 65%;
+  right: -22%;
+}
+
 /* this section for nav */
 .main-nav {
   display: flex;
@@ -337,6 +349,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin-top: 150px;
 }
 .careers-title {
   color: #fff;
@@ -495,5 +508,27 @@
     padding: 0;
     gap: 20px;
     flex-direction: column;
+  }
+  .careers {
+    flex-direction: column;
+  }
+  .games {
+    padding: 0;
+  }
+  .footer-main {
+    padding: 0;
+  }
+  .footer-info {
+    flex-wrap: wrap;
+  }
+  .footer-logo {
+    flex-wrap: wrap;
+  }
+  .terms {
+    flex-wrap: wrap;
+  }
+  .card {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 0;
   }
 }
