--- a/style.css
+++ b/style.css
@@ -82,16 +82,17 @@
 /* this section for bannar */
 .bannar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 0 240px;
+  /* padding: 0 240px; */
 }
 .bannar-content {
-  fill: linear-gradient(
-    223deg,
-    rgba(140, 87, 238, 0.03) 0%,
-    rgba(241, 68, 174, 0.03) 100%
-  );
+  background-image: linear-gradient(
+      223deg,
+      rgba(140, 87, 238, 0.03) 0%,
+      rgba(241, 68, 174, 0.03) 100%
+    ),
+    url("./images/Group\ 14.png");
 }
 .bannar-heading1 {
   color: #0b0223;
@@ -228,51 +229,15 @@
 .card {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  padding: 48px 240px 120px 240px;
+  gap: 24px;
+  padding: 48px 220px 120px 240px;
   border-radius: 16px;
 }
-.box-container {
-  position: relative;
-  display: inline-block;
-}
-
-.box-image {
-  width: 342px;
-  height: auto;
-  transition: filter 0.3s;
-}
-
-.box-image:hover {
-  filter: blur(5px);
-}
-
-.icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: none;
-}
-
-.box-container:hover .icon {
-  display: block;
-}
-
-.play-button {
+.box {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-}
-
-.text {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #ff42a5;
   text-align: center;
-  font-size: 20px;
-  font-weight: 600;
 }
 /* this section for instantly */
 .instantly {
@@ -475,23 +440,30 @@
   }
   .bannar {
     flex-direction: column-reverse;
-    padding: 50px 15px;
+    margin-top: 50px;
   }
   .bannar-content {
     margin-top: 20px;
-    padding: 27px;
+    padding: 30px;
   }
   .gamer {
     flex-direction: column;
     gap: 40px;
-    padding: 50px 0;
+    padding: 0;
+    margin: 50px 0;
   }
   .gamer-content {
     width: auto;
   }
   .gamer-section2 {
     text-align: center;
-    padding: 0 20px;
+    padding: 0 30px;
+  }
+  .videos {
+    margin-bottom: 60px;
+  }
+  .funny-txt {
+    padding: 0 30px;
   }
   .instantly-content {
     text-align: center;
@@ -529,6 +501,6 @@
   }
   .card {
     grid-template-columns: repeat(1, 1fr);
-    padding: 0;
+    padding: 40px;
   }
 }
