--- a/style.css
+++ b/style.css
@@ -344,10 +344,8 @@
 }
 .games-btn {
   display: flex;
-  flex-direction: row;
   align-items: center;
   gap: 16px;
-  justify-content: center;
   border: 0;
   border-radius: 50px;
   padding: 10px 20px 10px 10px;
@@ -359,8 +357,9 @@
 .games {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 34px;
-  padding: 120px 282px 119px 239px;
+  padding: 120px 319px 120px 322px;
 }
 /* this section for footer */
 .main-footer {
@@ -494,18 +493,40 @@
   }
   .games {
     padding: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin: 40px 0;
   }
   .footer-main {
     padding: 0;
   }
+  .footer-name {
+    gap: 15px;
+    padding-top: 30px;
+  }
   .footer-info {
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding: 0 40px;
+    margin-top: 30px;
   }
   .footer-logo {
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 0 90px;
+    margin-top: 30px;
   }
   .terms {
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 30px;
+    gap: 10px;
+    padding: 0 35px;
+  }
+  .play {
+    margin-top: 35px;
   }
   .card {
     grid-template-columns: repeat(1, 1fr);
