--- a/style.css
+++ b/style.css
@@ -16,22 +16,16 @@
   height: auto;
 }
 .image3 {
-  width: 50%;
+  width: 100%;
   height: auto;
-  position: absolute;
-  top: 55%;
-  left: -22%;
 }
 .image4 {
   width: 100%;
   height: auto;
 }
 .image5 {
-  width: 50%;
+  width: 100%;
   height: auto;
-  position: absolute;
-  top: 65%;
-  right: -22%;
 }
 
 /* this section for nav */
@@ -244,12 +238,31 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 120px 240px 120px 427px;
+  padding: 0 240px 120px 427px;
   gap: 120px;
 }
 .instantly-img {
-  border: 2px solid red;
   position: relative;
+}
+.image-2 {
+  position: relative;
+  width: 100%;
+}
+.image-3 {
+  position: absolute;
+  bottom: -17%;
+  left: -28%;
+  width: 55%;
+}
+.image-4 {
+  position: relative;
+  width: 100%;
+}
+.image-5 {
+  position: absolute;
+  bottom: -20%;
+  right: -20%;
+  width: 46%;
 }
 .instantly-title {
   font-size: 48px;
@@ -476,10 +489,33 @@
   .instantly-content2 {
     text-align: center;
   }
+  .image-2 {
+    position: relative;
+    width: 70%;
+    right: -25%;
+  }
+  .image-3 {
+    position: absolute;
+    bottom: -16%;
+    left: 6%;
+    width: 38%;
+  }
+  .image-4 {
+    position: relative;
+    width: 70%;
+    right: -7%;
+  }
+  .image-5 {
+    position: absolute;
+    bottom: -20%;
+    left: 59%;
+    width: 32%;
+  }
   .instantly2 {
     padding: 0;
     gap: 20px;
     flex-direction: column;
+    margin-top: 70px;
   }
   .careers {
     flex-direction: column;
