--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@
   }
   .bannar-content {
     margin-top: 20px;
-    padding: 30px;
+    padding: 30px 0;
   }
   .gamer {
     flex-direction: column;
@@ -554,6 +554,9 @@
     padding: 0 90px;
     margin-top: 30px;
   }
+  .footer-txt {
+    padding-bottom: 30px;
+  }
   .terms {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -566,6 +569,53 @@
   }
   .card {
     grid-template-columns: repeat(1, 1fr);
-    padding: 40px;
+    padding: 40px 0;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .main-nav {
+    margin: 50px 0;
+    padding: 0;
+  }
+  .bannar {
+    flex-direction: column;
+  }
+  .gamer {
+    padding: 0;
+    flex-direction: column-reverse;
+    margin-top: 30px;
+  }
+  .card {
+    margin-top: 30px;
+    padding: 0;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .instantly {
+    padding: 0;
+    margin-top: 100px;
+  }
+  .instantly2 {
+    padding: 0;
+    margin-top: 120px;
+  }
+  .careers {
+    flex-direction: column;
+    margin-top: 120px;
+  }
+  .careers-content {
+    padding-top: 50px;
+  }
+  .career-img {
+    margin: 100px 0;
+  }
+  .games {
+    padding: 100px 0;
+  }
+  .footer-info {
+    flex-wrap: wrap;
+  }
+  .play {
+    margin-top: 52px;
   }
 }
