--- a/style.css
+++ b/style.css
@@ -571,6 +571,9 @@
     grid-template-columns: repeat(1, 1fr);
     padding: 40px 0;
   }
+  .box-txt {
+    padding: 0 40px;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
