--- a/style.css
+++ b/style.css
@@ -233,6 +233,47 @@
   align-items: center;
   text-align: center;
 }
+.box-container {
+  position: relative;
+  overflow: hidden;
+}
+.box-image {
+  display: block;
+  width: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 16px;
+}
+.image-content {
+  position: absolute;
+  inset: 0;
+  background: (255, 255, 255, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.box-image,
+.image-content {
+  transition: 200ms ease-in-out;
+}
+.image-content {
+  opacity: 0;
+}
+.box-container:hover .image-content {
+  opacity: 1;
+}
+.box-container:hover .box-image {
+  filter: blur(5px);
+}
+.watch-now {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: #ff42a5;
+}
+
 /* this section for instantly */
 .instantly {
   display: flex;
@@ -570,9 +611,6 @@
   .card {
     grid-template-columns: repeat(1, 1fr);
     padding: 40px 0;
-  }
-  .box-txt {
-    padding: 0 40px;
   }
 }
 
