--- a/style.css
+++ b/style.css
@@ -500,6 +500,9 @@
     margin-top: 20px;
     padding: 30px 0;
   }
+  .bannar-img {
+    margin-top: 20px;
+  }
   .gamer {
     flex-direction: column;
     gap: 40px;
@@ -529,6 +532,10 @@
   }
   .instantly-content2 {
     text-align: center;
+  }
+  .instantly-txt {
+    width: auto;
+    padding: 20px;
   }
   .image-2 {
     position: relative;
@@ -611,6 +618,9 @@
   .card {
     grid-template-columns: repeat(1, 1fr);
     padding: 40px 0;
+  }
+  .box-txt {
+    padding: 0 40px;
   }
 }
 
